Created fatjar gradle task and updated README