@@ -14,13 +14,13 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
-    compile 'com.google.code.gson:gson:2.8.6'
-    compile 'commons-cli:commons-cli:1.4'
-    compile 'org.apache.commons:commons-lang3:3.11'
-    compile 'commons-io:commons-io:2.8.0'
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-    compile 'org.slf4j:slf4j-api:1.7.30'
-    compile 'org.slf4j:slf4j-nop:1.7.30'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'commons-cli:commons-cli:1.4'
+    implementation 'org.apache.commons:commons-lang3:3.11'
+    implementation 'commons-io:commons-io:2.8.0'
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+    implementation 'org.slf4j:slf4j-nop:1.7.30'
     implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.9.0'
     implementation 'com.google.guava:guava:29.0-jre'
     implementation "org.gradle:gradle-tooling-api:6.6.1"
@@ -32,30 +32,26 @@ application {
     mainClassName = 'lsifjava.MainKt'
 }
 
-compileJava {
-    options.compilerArgs += ["--enable-preview"]
-    options.compilerArgs += [
-        "--add-exports",
-        "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        "--add-exports",
-        "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-        "--add-exports",
-        "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-        "--add-exports",
-        "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-        "--add-exports",
-        "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-        "--add-exports",
-        "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-        "--add-exports",
-        "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        "--add-exports",
-        "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-    ]
+jar {
+    manifest {
+        attributes 'Main-Class': application.mainClassName
+    }
+}
+
+task fatJar(type: Jar) {
+    manifest.from jar.manifest
+    from {
+        configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    } {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+    with jar
 }
 
 group = 'com.sourcegraph'
-version = '1.0-SNAPSHOT'
+version = '1.0'
 
 compileKotlin {
     kotlinOptions {
